安全加固与代码质量修复：修复全项目安全漏洞和代码缺陷
主要修复：
- SecurityConfig: 收紧CORS/anyRequest.denyAll, 启用@EnableMethodSecurity
- SSRF防护: 用InetAddress解析替代字符串黑名单, 覆盖DNS rebinding/私有网段
- SvgSanitizer: 补全XXE防御(setExpandEntityReferences), 添加use/foreignObject/image SSRF防护
- ContentValidator: 接入validateContentSize(按字节), 添加layer type白名单校验
- AssetService: 流式上传替代全文件加载, SVG上传时清洗, kind白名单, LIKE转义, DigestOutputStream
- AssetController: cleanup端点@PreAuthorize(ADMIN), SVG预览CSP:sandbox, watermark/crop参数校验
- RevisionService: pg_advisory_xact_lock防版本号竞态
- DocumentService: restoreContent添加内容校验, 接入UserContext
- AiImageController: 合并double base64 decode, 添加direction/pixels校验
- GlobalExceptionHandler: 添加MethodArgumentNotValidException/IllegalStateException处理
- HttpClientConfig: 添加destroyMethod="close"防止连接池泄漏
- ImageUtils: 修复VP8X flags读取(2→4字节), mark/reset兼容性, JPEG length校验
- VolcengineResponse: NPE防护
- 新增UserContext统一用户ID获取, 新增ImageUtils/LegacyImageUtils图片尺寸解析

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>