@@ -6,6 +6,8 @@ import com.example.editor.asset.entity.EditorAsset;
 import com.example.editor.asset.exception.FileValidationException;
 import com.example.editor.asset.mapper.AssetMapper;
 import com.example.editor.common.exception.NotFoundException;
+import com.example.editor.common.security.UserContext;
+import com.example.editor.common.util.SvgSanitizer;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
@@ -19,9 +21,11 @@ import java.awt.image.BufferedImage;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
+import java.security.DigestOutputStream;
 import java.security.MessageDigest;
 import java.time.YearMonth;
 import java.util.List;
@@ -61,28 +65,24 @@ public class AssetService {
     @Value("${app.storage.thumbnail-size:200}")
     private int thumbnailSize;
 
-    private static final Long DEFAULT_USER_ID = 1L;
-
     private static final String THUMBNAIL_DIR = "thumbnails";
 
-    // File magic numbers for actual content validation (file signature detection)
+    private static final Set<String> VALID_KINDS = Set.of("image", "svg", "font", "document");
+
     private static final Map<String, byte[]> MAGIC_NUMBERS = Map.ofEntries(
             Map.entry(".png", new byte[]{(byte) 0x89, 0x50, 0x4E, 0x47, 0x0D, 0x0A, 0x1A, 0x0A}),
             Map.entry(".jpg", new byte[]{(byte) 0xFF, (byte) 0xD8, (byte) 0xFF}),
             Map.entry(".jpeg", new byte[]{(byte) 0xFF, (byte) 0xD8, (byte) 0xFF}),
-            Map.entry(".gif", new byte[]{0x47, 0x49, 0x46, 0x38}), // GIF87a or GIF89a
-            Map.entry(".webp", new byte[]{0x52, 0x49, 0x46, 0x46}), // RIFF (WebP container)
-            Map.entry(".bmp", new byte[]{0x42, 0x4D}), // BM
+            Map.entry(".gif", new byte[]{0x47, 0x49, 0x46, 0x38}),
+            Map.entry(".webp", new byte[]{0x52, 0x49, 0x46, 0x46}),
+            Map.entry(".bmp", new byte[]{0x42, 0x4D}),
             Map.entry(".ico", new byte[]{0x00, 0x00, 0x01, 0x00})
     );
 
-    // Allowed file extensions (lowercase, with dot)
-    // SVG is allowed only when kind="svg" (sanitized by DocumentService via SvgSanitizer)
     private static final Set<String> ALLOWED_EXTENSIONS = Set.of(
             ".png", ".jpg", ".jpeg", ".gif", ".webp", ".bmp", ".ico", ".svg"
     );
 
-    // Mapping from extension to allowed MIME types
     private static final Map<String, Set<String>> EXTENSION_TO_MIME_TYPES = Map.ofEntries(
             Map.entry(".png", Set.of("image/png")),
             Map.entry(".jpg", Set.of("image/jpeg")),
@@ -94,7 +94,6 @@ public class AssetService {
             Map.entry(".svg", Set.of("image/svg+xml"))
     );
 
-    // Dangerous extensions that must never be allowed
     private static final Set<String> BLOCKED_EXTENSIONS = Set.of(
             ".html", ".htm", ".js", ".mjs", ".svgz",
             ".xml", ".xhtml", ".xht", ".css",
@@ -103,24 +102,50 @@ public class AssetService {
             ".jar", ".class", ".dll", ".so", ".dylib"
     );
 
+    private Long userId() {
+        return UserContext.getCurrentUserId();
+    }
+
     @Transactional
     public AssetResponse upload(MultipartFile file, Long documentId, String kind) {
         validateUploadedFile(file);
+
+        if (!VALID_KINDS.contains(kind)) {
+            throw new IllegalArgumentException("Invalid asset kind: " + kind + ". Allowed: " + VALID_KINDS);
+        }
 
         try {
             String originalFilename = file.getOriginalFilename();
             String ext = extractAndValidateExtension(originalFilename, kind);
 
-            // Read file bytes first for validation and deduplication
-            byte[] fileBytes = file.getBytes();
-            String sha256 = calculateSha256(fileBytes);
+            // Stream to disk first to avoid loading full file into memory
+            String storedName = UUID.randomUUID().toString().replace("-", "") + ext;
+            YearMonth ym = YearMonth.now();
+            String relativePath = ym.getYear() + "/" + String.format("%02d", ym.getMonthValue()) + "/" + storedName;
 
-            // Check for duplicate file - return existing if found
+            Path dirPath = Paths.get(storagePath, ym.getYear() + "", String.format("%02d", ym.getMonthValue()));
+            Files.createDirectories(dirPath);
+            Path filePath = dirPath.resolve(storedName);
+
+            String sha256;
+            try (InputStream is = file.getInputStream();
+                 OutputStream os = Files.newOutputStream(filePath)) {
+                MessageDigest digest = MessageDigest.getInstance("SHA-256");
+                byte[] buffer = new byte[8192];
+                int bytesRead;
+                while ((bytesRead = is.read(buffer)) != -1) {
+                    digest.update(buffer, 0, bytesRead);
+                    os.write(buffer, 0, bytesRead);
+                }
+                sha256 = hexEncode(digest.digest());
+            }
+
+            // Check for duplicate
             if (dedupEnabled) {
                 EditorAsset existingAsset = assetMapper.selectBySha256(sha256);
                 if (existingAsset != null) {
+                    Files.deleteIfExists(filePath);
                     log.info("Duplicate file detected (SHA256: {}), returning existing asset id={}", sha256, existingAsset.getId());
-                    // Update documentId if provided and different
                     if (documentId != null && !documentId.equals(existingAsset.getDocumentId())) {
                         assetMapper.updateDocumentId(existingAsset.getId(), documentId);
                         existingAsset.setDocumentId(documentId);
@@ -132,19 +157,19 @@ public class AssetService {
             // Validate Content-Type matches extension
             validateContentType(file.getContentType(), ext);
 
-            // Validate file magic number (actual content type)
-            validateMagicNumber(fileBytes, ext, originalFilename);
+            // Validate magic number (read first bytes from disk)
+            validateMagicNumber(filePath, ext, originalFilename);
 
-            String storedName = UUID.randomUUID().toString().replace("-", "") + ext;
-            YearMonth ym = YearMonth.now();
-            String relativePath = ym.getYear() + "/" + String.format("%02d", ym.getMonthValue()) + "/" + storedName;
-
-            Path dirPath = Paths.get(storagePath, ym.getYear() + "", String.format("%02d", ym.getMonthValue()));
-            Files.createDirectories(dirPath);
-            Path filePath = dirPath.resolve(storedName);
-
-            // Transfer file to storage
-            Files.write(filePath, fileBytes);
+            // Sanitize SVG content at upload time
+            if (".svg".equals(ext)) {
+                String svgContent = Files.readString(filePath, StandardCharsets.UTF_8);
+                if (!svgContent.contains("<svg")) {
+                    Files.deleteIfExists(filePath);
+                    throw FileValidationException.fileCorrupted(originalFilename);
+                }
+                String sanitized = SvgSanitizer.sanitize(svgContent);
+                Files.writeString(filePath, sanitized, StandardCharsets.UTF_8);
+            }
 
             Integer width = null;
             Integer height = null;
@@ -155,12 +180,9 @@ public class AssetService {
                     if (img != null) {
                         width = img.getWidth();
                         height = img.getHeight();
-                        // Generate thumbnail for large images
                         if (thumbnailEnabled && (width > thumbnailSize || height > thumbnailSize)) {
                             generateThumbnail(filePath, relativePath, width, height);
                         }
-                    } else {
-                        log.warn("Failed to read image dimensions for file: {}", storedName);
                     }
                 } catch (IOException e) {
                     log.warn("Error reading image dimensions for file {}: {}", storedName, e.getMessage());
@@ -168,28 +190,31 @@ public class AssetService {
             }
 
             EditorAsset asset = new EditorAsset();
-            asset.setOwnerId(DEFAULT_USER_ID);
+            asset.setOwnerId(userId());
             asset.setDocumentId(documentId);
             asset.setKind(kind);
             asset.setFilename(originalFilename);
             asset.setMimeType(file.getContentType());
             asset.setBucket("local");
             asset.setStorageKey(relativePath);
-            asset.setFileSize(file.getSize());
+            asset.setFileSize(Files.size(filePath));
             asset.setWidth(width);
             asset.setHeight(height);
             asset.setSha256(sha256);
             assetMapper.insert(asset);
 
             log.info("Asset uploaded: id={}, filename={}, size={}, sha256={}",
-                    asset.getId(), originalFilename, file.getSize(), sha256);
+                    asset.getId(), originalFilename, Files.size(filePath), sha256);
 
             return toResponse(asset, false);
+        } catch (FileValidationException e) {
+            throw e;
         } catch (IOException e) {
             log.error("Failed to upload file: {}", e.getMessage(), e);
             throw new RuntimeException("Failed to upload file", e);
-        } catch (FileValidationException e) {
-            throw e; // Re-throw validation exceptions
+        } catch (Exception e) {
+            log.error("Failed to upload file: {}", e.getMessage(), e);
+            throw new RuntimeException("Failed to upload file", e);
         }
     }
 
@@ -202,13 +227,8 @@ public class AssetService {
     }
 
     public AssetListResponse listAssets(Long documentId, String kind, int page, int size) {
-        // Validate pagination parameters
-        if (page < 0) {
-            page = 0;
-        }
-        if (size < 1 || size > maxPageSize) {
-            size = Math.min(Math.max(size, 1), maxPageSize);
-        }
+        if (page < 0) page = 0;
+        if (size < 1 || size > maxPageSize) size = Math.min(Math.max(size, 1), maxPageSize);
         int offset = page * size;
         List<EditorAsset> assets = assetMapper.selectList(documentId, kind, offset, size);
         long total = assetMapper.countByCondition(documentId, kind);
@@ -224,6 +244,8 @@ public class AssetService {
         if (files.size() > maxBatchSize) {
             throw new IllegalArgumentException("Batch upload limited to " + maxBatchSize + " files at once");
         }
+        // Validate all files first, then upload
+        files.forEach(this::validateUploadedFile);
         return files.stream()
                 .map(file -> upload(file, documentId, kind))
                 .toList();
@@ -235,7 +257,6 @@ public class AssetService {
         if (asset == null) {
             throw new NotFoundException("asset not found");
         }
-        // Delete file from storage
         Path filePath = Paths.get(storagePath, asset.getStorageKey());
         try {
             Files.deleteIfExists(filePath);
@@ -243,16 +264,10 @@ public class AssetService {
         } catch (IOException e) {
             log.warn("Failed to delete asset file {}: {}", asset.getStorageKey(), e.getMessage());
         }
-        // Delete thumbnails to avoid orphaned files
         deleteThumbnails(asset.getStorageKey());
-        // Delete database record
         assetMapper.deleteById(id);
     }
 
-    /**
-     * Check if a file with the same SHA256 already exists.
-     * Returns existing asset if found, null otherwise.
-     */
     public AssetResponse findDuplicateBySha256(String sha256) {
         EditorAsset existing = assetMapper.selectBySha256(sha256);
         if (existing != null) {
@@ -261,22 +276,18 @@ public class AssetService {
         return null;
     }
 
-    /**
-     * Search assets by filename (partial match).
-     */
     public AssetListResponse searchAssets(String query, Long documentId, String kind, int page, int size) {
         if (page < 0) page = 0;
         if (size < 1 || size > maxPageSize) size = Math.min(Math.max(size, 1), maxPageSize);
         int offset = page * size;
-        List<EditorAsset> assets = assetMapper.searchByFilename(query, documentId, kind, offset, size);
-        long total = assetMapper.countSearchByFilename(query, documentId, kind);
+        // Escape LIKE wildcards
+        String escapedQuery = escapeLikeWildcards(query);
+        List<EditorAsset> assets = assetMapper.searchByFilename(escapedQuery, documentId, kind, offset, size);
+        long total = assetMapper.countSearchByFilename(escapedQuery, documentId, kind);
         List<AssetResponse> items = assets.stream().map(this::toResponse).toList();
         return new AssetListResponse(items, total, page, size);
     }
 
-    /**
-     * Get storage statistics: total files, total size, size by kind.
-     */
     public StorageStats getStorageStats() {
         long totalFiles = assetMapper.countByCondition(null, null);
         long totalSize = assetMapper.selectTotalFileSize();
@@ -285,9 +296,6 @@ public class AssetService {
         return new StorageStats(totalFiles, totalSize, imageCount, imageSize);
     }
 
-    /**
-     * Batch delete assets.
-     */
     @Transactional
     public BatchDeleteResult batchDelete(List<Long> ids) {
         if (ids == null || ids.isEmpty()) {
@@ -305,7 +313,6 @@ public class AssetService {
                 if (asset != null) {
                     Path filePath = Paths.get(storagePath, asset.getStorageKey());
                     Files.deleteIfExists(filePath);
-                    // Also delete thumbnails
                     deleteThumbnails(asset.getStorageKey());
                     assetMapper.deleteById(id);
                     deletedCount++;
@@ -335,9 +342,6 @@ public class AssetService {
         }
     }
 
-    /**
-     * Get file content for download/preview.
-     */
     public FileContent getFileContent(Long id) {
         EditorAsset asset = assetMapper.selectById(id);
         if (asset == null) {
@@ -355,10 +359,6 @@ public class AssetService {
         );
     }
 
-    /**
-     * 获取缩略图内容，支持按需生成。
-     * size参数限制在50-1000范围内，防止恶意请求生成超大缩略图消耗服务器资源。
-     */
     public FileContent getThumbnail(Long id, int size) {
         if (size < 50 || size > 1000) {
             throw new IllegalArgumentException("Thumbnail size must be between 50 and 1000");
@@ -372,7 +372,6 @@ public class AssetService {
         }
         Path thumbnailPath = Paths.get(storagePath, THUMBNAIL_DIR, size + "px", asset.getStorageKey());
         if (!Files.exists(thumbnailPath)) {
-            // Generate thumbnail on demand if original exists
             Path originalPath = Paths.get(storagePath, asset.getStorageKey());
             if (Files.exists(originalPath)) {
                 generateThumbnail(originalPath, asset.getStorageKey(), asset.getWidth(), asset.getHeight(), size);
@@ -392,11 +391,6 @@ public class AssetService {
         }
     }
 
-    /**
-     * 清理孤立文件：删除存储目录中存在但数据库中无记录的文件
-     * 会跳过缩略图目录（缩略图会在访问时按需重新生成）
-     * 注意：此操作不可逆，应限制为管理员权限调用
-     */
     public CleanupResult cleanupOrphanedFiles() {
         List<EditorAsset> allAssets = assetMapper.selectList(null, null, 0, Integer.MAX_VALUE);
         Set<String> validPaths = allAssets.stream()
@@ -409,7 +403,7 @@ public class AssetService {
         try {
             Files.walk(Paths.get(storagePath))
                     .filter(Files::isRegularFile)
-                    .filter(p -> !p.toString().contains(THUMBNAIL_DIR)) // Skip thumbnails
+                    .filter(p -> !p.toString().contains(THUMBNAIL_DIR))
                     .forEach(p -> {
                         String relative = Paths.get(storagePath).relativize(p).toString().replace("\\", "/");
                         if (!validPaths.contains(relative)) {
@@ -447,23 +441,14 @@ public class AssetService {
         return toResponse(asset, false);
     }
 
-    private String calculateSha256(byte[] data) {
-        try {
-            MessageDigest digest = MessageDigest.getInstance("SHA-256");
-            byte[] hash = digest.digest(data);
-            StringBuilder hex = new StringBuilder();
-            for (byte b : hash) {
-                hex.append(String.format("%02x", b));
-            }
-            return hex.toString();
-        } catch (Exception e) {
-            throw new IllegalStateException("SHA-256 algorithm not available", e);
+    private String hexEncode(byte[] hash) {
+        StringBuilder hex = new StringBuilder();
+        for (byte b : hash) {
+            hex.append(String.format("%02x", b));
         }
+        return hex.toString();
     }
 
-    /**
-     * Validate the uploaded file: non-empty, size limit, and filename safety.
-     */
     private void validateUploadedFile(MultipartFile file) {
         if (file == null || file.isEmpty()) {
             throw FileValidationException.fileEmpty();
@@ -472,39 +457,29 @@ public class AssetService {
             throw FileValidationException.filenameEmpty();
         }
         String filename = file.getOriginalFilename();
-        // Block path traversal attempts
         if (filename.contains("..") || filename.contains("/") || filename.contains("\\")) {
             throw FileValidationException.filenameInvalid(filename);
         }
-        // Check file size limit
         long maxBytes = maxFileSizeMb * 1024L * 1024L;
         if (file.getSize() > maxBytes) {
             throw FileValidationException.fileTooLarge(filename, file.getSize(), maxBytes);
         }
     }
 
-    /**
-     * Extract file extension and validate against allowlist + Content-Type consistency.
-     * @param originalFilename the original filename
-     * @param kind the asset kind (e.g., "image", "svg")
-     */
     private String extractAndValidateExtension(String originalFilename, String kind) {
         if (originalFilename == null || !originalFilename.contains(".")) {
             throw FileValidationException.extensionNotAllowed("");
         }
         String ext = originalFilename.substring(originalFilename.lastIndexOf(".")).toLowerCase();
 
-        // Block dangerous extensions first
         if (BLOCKED_EXTENSIONS.contains(ext)) {
             throw FileValidationException.extensionBlocked(ext);
         }
 
-        // SVG is only allowed when kind="svg" (DocumentService sanitizes via SvgSanitizer)
         if (".svg".equals(ext) && !"svg".equals(kind)) {
             throw FileValidationException.extensionNotAllowed(ext);
         }
 
-        // Must be in allowlist
         if (!ALLOWED_EXTENSIONS.contains(ext)) {
             throw FileValidationException.extensionNotAllowed(ext);
         }
@@ -512,9 +487,6 @@ public class AssetService {
         return ext;
     }
 
-    /**
-     * Verify that the declared Content-Type matches the file extension.
-     */
     private void validateContentType(String contentType, String ext) {
         if (contentType == null || contentType.isBlank()) {
             throw FileValidationException.contentTypeMismatch(ext, "null");
@@ -526,30 +498,32 @@ public class AssetService {
         }
     }
 
-    /**
-     * Validate file magic number to ensure actual content matches declared extension.
-     * Prevents attackers from uploading malicious files disguised as images.
-     */
-    private void validateMagicNumber(byte[] fileBytes, String ext, String filename) {
+    private void validateMagicNumber(Path filePath, String ext, String filename) {
         byte[] expectedMagic = MAGIC_NUMBERS.get(ext);
-        if (expectedMagic == null) {
-            return; // No magic number check for this extension
-        }
-        if (fileBytes.length < expectedMagic.length) {
-            throw FileValidationException.fileCorrupted(filename);
-        }
-        for (int i = 0; i < expectedMagic.length; i++) {
-            if (fileBytes[i] != expectedMagic[i]) {
-                throw FileValidationException.magicNumberMismatch(filename, ext);
+        if (expectedMagic == null) return;
+        try (InputStream is = Files.newInputStream(filePath)) {
+            byte[] header = new byte[expectedMagic.length];
+            int read = is.read(header);
+            if (read < expectedMagic.length) {
+                throw FileValidationException.fileCorrupted(filename);
             }
+            for (int i = 0; i < expectedMagic.length; i++) {
+                if (header[i] != expectedMagic[i]) {
+                    throw FileValidationException.magicNumberMismatch(filename, ext);
+                }
+            }
+        } catch (FileValidationException e) {
+            throw e;
+        } catch (IOException e) {
+            throw FileValidationException.fileCorrupted(filename);
         }
     }
 
-    /**
-     * 为图片文件生成指定尺寸的缩略图
-     * 保持原始宽高比，使用双线性插值保证缩放质量
-     * Graphics2D必须用try-finally包裹，否则异常时native资源不会释放导致内存泄漏
-     */
+    private String escapeLikeWildcards(String query) {
+        if (query == null) return null;
+        return query.replace("\\", "\\\\").replace("%", "\\%").replace("_", "\\_");
+    }
+
     private void generateThumbnail(Path originalPath, String relativePath, int width, int height, int targetSize) {
         try {
             BufferedImage original = ImageIO.read(originalPath.toFile());
@@ -558,7 +532,6 @@ public class AssetService {
                 return;
             }
 
-            // Calculate thumbnail dimensions maintaining aspect ratio
             int thumbWidth, thumbHeight;
             if (width > height) {
                 thumbWidth = targetSize;
@@ -568,7 +541,6 @@ public class AssetService {
                 thumbWidth = (int) ((double) width / height * targetSize);
             }
 
-            // 创建缩略图，使用try-finally确保Graphics2D资源被释放，防止native内存泄漏
             BufferedImage thumbnail = new BufferedImage(thumbWidth, thumbHeight, BufferedImage.TYPE_INT_RGB);
             Graphics2D g2d = thumbnail.createGraphics();
             try {
@@ -579,15 +551,17 @@ public class AssetService {
                 g2d.dispose();
             }
 
-            // Determine output format based on original
+            Path parentDir = Paths.get(relativePath).getParent();
             String ext = relativePath.substring(relativePath.lastIndexOf(".")).toLowerCase();
             String formatName = ext.equals(".png") ? "png" : "jpg";
+            String fileName = Paths.get(relativePath).getFileName().toString();
 
-            // Save thumbnail
-            Path thumbnailDir = Paths.get(storagePath, THUMBNAIL_DIR, targetSize + "px",
-                    relativePath.substring(0, relativePath.lastIndexOf("/")));
+            Path thumbnailDir = Paths.get(storagePath, THUMBNAIL_DIR, targetSize + "px");
+            if (parentDir != null) {
+                thumbnailDir = thumbnailDir.resolve(parentDir);
+            }
             Files.createDirectories(thumbnailDir);
-            Path thumbnailPath = thumbnailDir.resolve(relativePath.substring(relativePath.lastIndexOf("/") + 1));
+            Path thumbnailPath = thumbnailDir.resolve(fileName);
 
             try (OutputStream os = Files.newOutputStream(thumbnailPath)) {
                 ImageIO.write(thumbnail, formatName, os);
@@ -603,18 +577,15 @@ public class AssetService {
         generateThumbnail(originalPath, relativePath, width, height, thumbnailSize);
     }
 
-    /**
-     * Delete all thumbnails for a given asset storage key.
-     */
     private void deleteThumbnails(String storageKey) {
         Path thumbnailBase = Paths.get(storagePath, THUMBNAIL_DIR);
-        if (!Files.exists(thumbnailBase)) {
-            return;
-        }
+        if (!Files.exists(thumbnailBase)) return;
+
+        String fileName = Paths.get(storageKey).getFileName().toString();
         try {
             Files.walk(thumbnailBase)
                     .filter(Files::isRegularFile)
-                    .filter(p -> p.toString().contains(storageKey.replace("/", "\\")))
+                    .filter(p -> p.getFileName().toString().equals(fileName))
                     .forEach(p -> {
                         try {
                             Files.delete(p);
@@ -628,12 +599,6 @@ public class AssetService {
         }
     }
 
-    /**
-     * 为图片资产添加水印文字
-     * 处理流程：读取原图 → 创建副本 → 在副本上绘制半透明文字 → 保存为新资产
-     * 支持5种水印位置：左上、右上、左下、右下、居中
-     * 文字带有1px偏移的黑色阴影，提高在浅色背景上的可读性
-     */
     @Transactional
     public AssetResponse applyWatermark(Long id, String watermarkText, WatermarkPosition position, int opacity) {
         EditorAsset asset = assetMapper.selectById(id);
@@ -655,19 +620,15 @@ public class AssetService {
                 throw new IllegalArgumentException("Cannot read image file");
             }
 
-            // 创建水印图像，使用try-finally确保Graphics2D资源释放
             BufferedImage watermarked = new BufferedImage(original.getWidth(), original.getHeight(), BufferedImage.TYPE_INT_RGB);
             Graphics2D g2d = watermarked.createGraphics();
             try {
                 g2d.drawImage(original, 0, 0, null);
-
-                // Configure watermark text
                 g2d.setComposite(AlphaComposite.getInstance(AlphaComposite.SRC_OVER, opacity / 100.0f));
                 int fontSize = Math.max(original.getWidth() / 20, 12);
                 g2d.setFont(new Font("Arial", Font.BOLD, fontSize));
                 g2d.setColor(Color.WHITE);
 
-                // Calculate position
                 FontMetrics fm = g2d.getFontMetrics();
                 int textWidth = fm.stringWidth(watermarkText);
                 int textHeight = fm.getHeight();
@@ -682,7 +643,6 @@ public class AssetService {
                     default -> { x = 10; y = original.getHeight() - 10; }
                 }
 
-                // Draw watermark with shadow for better visibility
                 g2d.setColor(Color.BLACK);
                 g2d.drawString(watermarkText, x + 1, y + 1);
                 g2d.setColor(Color.WHITE);
@@ -691,7 +651,6 @@ public class AssetService {
                 g2d.dispose();
             }
 
-            // Save watermarked image (create new asset)
             String ext = asset.getStorageKey().substring(asset.getStorageKey().lastIndexOf(".")).toLowerCase();
             String formatName = ext.equals(".png") ? "png" : "jpg";
             YearMonth ym = YearMonth.now();
@@ -702,13 +661,16 @@ public class AssetService {
             Files.createDirectories(dirPath);
             Path filePath = dirPath.resolve(storedName);
 
-            try (OutputStream os = Files.newOutputStream(filePath)) {
-                ImageIO.write(watermarked, formatName, os);
+            // Compute SHA-256 while writing
+            MessageDigest digest = MessageDigest.getInstance("SHA-256");
+            try (OutputStream fos = Files.newOutputStream(filePath);
+                 DigestOutputStream dos = new DigestOutputStream(fos, digest)) {
+                ImageIO.write(watermarked, formatName, dos);
             }
+            String sha256 = hexEncode(digest.digest());
 
-            // Create new asset record
             EditorAsset newAsset = new EditorAsset();
-            newAsset.setOwnerId(DEFAULT_USER_ID);
+            newAsset.setOwnerId(userId());
             newAsset.setDocumentId(asset.getDocumentId());
             newAsset.setKind("image");
             newAsset.setFilename(asset.getFilename().replaceAll("(\\.[^.]+)$", "_watermarked$1"));
@@ -718,7 +680,7 @@ public class AssetService {
             newAsset.setFileSize(Files.size(filePath));
             newAsset.setWidth(original.getWidth());
             newAsset.setHeight(original.getHeight());
-            newAsset.setSha256(calculateSha256(Files.readAllBytes(filePath)));
+            newAsset.setSha256(sha256);
             assetMapper.insert(newAsset);
 
             log.info("Applied watermark to asset {}: text='{}', position={}, opacity={}",
@@ -727,12 +689,11 @@ public class AssetService {
             return toResponse(newAsset);
         } catch (IOException e) {
             throw new RuntimeException("Failed to apply watermark", e);
+        } catch (Exception e) {
+            throw new RuntimeException("Failed to apply watermark", e);
         }
     }
 
-    /**
-     * Crop an image asset.
-     */
     @Transactional
     public AssetResponse cropImage(Long id, int x, int y, int width, int height) {
         EditorAsset asset = assetMapper.selectById(id);
@@ -741,9 +702,6 @@ public class AssetService {
         }
         if (!"image".equals(asset.getKind())) {
             throw new IllegalArgumentException("Only image assets can be cropped");
-        }
-        if (x < 0 || y < 0 || width <= 0 || height <= 0) {
-            throw new IllegalArgumentException("Invalid crop parameters");
         }
 
         Path originalPath = Paths.get(storagePath, asset.getStorageKey());
@@ -757,15 +715,12 @@ public class AssetService {
                 throw new IllegalArgumentException("Cannot read image file");
             }
 
-            // Validate crop bounds
             if (x + width > original.getWidth() || y + height > original.getHeight()) {
                 throw new IllegalArgumentException("Crop area exceeds image bounds");
             }
 
-            // Crop image
             BufferedImage cropped = original.getSubimage(x, y, width, height);
 
-            // Save cropped image
             String ext = asset.getStorageKey().substring(asset.getStorageKey().lastIndexOf(".")).toLowerCase();
             String formatName = ext.equals(".png") ? "png" : "jpg";
             YearMonth ym = YearMonth.now();
@@ -776,13 +731,16 @@ public class AssetService {
             Files.createDirectories(dirPath);
             Path filePath = dirPath.resolve(storedName);
 
-            try (OutputStream os = Files.newOutputStream(filePath)) {
-                ImageIO.write(cropped, formatName, os);
+            // Compute SHA-256 while writing
+            MessageDigest digest = MessageDigest.getInstance("SHA-256");
+            try (OutputStream fos = Files.newOutputStream(filePath);
+                 DigestOutputStream dos = new DigestOutputStream(fos, digest)) {
+                ImageIO.write(cropped, formatName, dos);
             }
+            String sha256 = hexEncode(digest.digest());
 
-            // Create new asset record
             EditorAsset newAsset = new EditorAsset();
-            newAsset.setOwnerId(DEFAULT_USER_ID);
+            newAsset.setOwnerId(userId());
             newAsset.setDocumentId(asset.getDocumentId());
             newAsset.setKind("image");
             newAsset.setFilename(asset.getFilename().replaceAll("(\\.[^.]+)$", "_cropped$1"));
@@ -792,13 +750,15 @@ public class AssetService {
             newAsset.setFileSize(Files.size(filePath));
             newAsset.setWidth(width);
             newAsset.setHeight(height);
-            newAsset.setSha256(calculateSha256(Files.readAllBytes(filePath)));
+            newAsset.setSha256(sha256);
             assetMapper.insert(newAsset);
 
             log.info("Cropped asset {}: x={}, y={}, width={}, height={}", id, x, y, width, height);
 
             return toResponse(newAsset);
         } catch (IOException e) {
+            throw new RuntimeException("Failed to crop image", e);
+        } catch (Exception e) {
             throw new RuntimeException("Failed to crop image", e);
         }
     }
